# aoc_mod

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: build_wheel.yml
aoc_mod/: generate_data.py
aoc_mod/helpers/: __init__.py  file_templates.py  submit_ans.py
challenges/2023/day1/: day1.py
docs/source/: aoc_mod_usage.rst  conf.py  index.rst
file_templates/: solution_template.py
src/aoc_mod/: interactive.py  utilities.py
src/aoc_mod/data/templates/: solution_template.py
src/aoc_mod/file_templates/: py_templates.py
tests/: test_aoc_mod.py  test_interactive.py  test_utilities.py
