[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-mod"
version = "0.1.0"
requires-python = ">=3.8"
description = "Advent of Code helper script to automatically set up a Python script and pull challenge data from the website."
readme = "README.md"

[project.scripts]
aoc-mod = "aoc-mod.generate_data:main"

changelog = "https://github.com/cosmos1255/aoc_mod/blob/main/CHANGELOG.md"
issues = "https://github.com/cosmos1255/aoc_mod/issues"
repository = "https://github.com/cosmos1255/aoc_mod"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["aoc_mod*"]
exclude = ["docs*", "tests*"]

[project.optional-dependencies]
build = ["build >= 1.2"]
test = ["pytest ~= 8.1"]
